# fontcull

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-plz.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-plz.yml
fontcull/: CHANGELOG.md  Cargo.toml  README.md
fontcull-cli/: CHANGELOG.md  Cargo.toml  README.md
fontcull-cli/src/: klippa_backend.rs  main.rs
fontcull-cli/wix/: main.wxs
fontcull/src/: lib.rs  static_analysis.rs
src/: glyph_script.rs  klippa_backend.rs  lib.rs  main.rs  static_analysis.rs
