[package]
name = "fontcull"
version = "1.0.3"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Subset fonts based on actual glyph usage from web pages"
license = "MIT"
repository = "https://github.com/fasterthanlime/fontcull"
keywords = ["font", "subset", "woff2", "web", "glyphhanger"]
categories = ["command-line-utilities", "web-programming"]

[features]
default = ["klippa"]
klippa = ["dep:fontcull-klippa", "dep:fontcull-skrifa", "dep:fontcull-write-fonts", "dep:fontcull-read-fonts", "dep:woff"]

[dependencies]
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
url = "2"

# klippa backend (optional, vendored from googlefonts/fontations)
fontcull-klippa = { version = "0.1.0", path = "vendored/fontcull-klippa", optional = true }
fontcull-skrifa = { version = "0.39.0", path = "vendored/fontcull-skrifa", optional = true }
fontcull-write-fonts = { version = "0.44.1", path = "vendored/fontcull-write-fonts", optional = true }
fontcull-read-fonts = { version = "0.36.0", path = "vendored/fontcull-read-fonts", optional = true }
woff = { version = "0.6", optional = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
