[workspace]
members = [
    "fontcull",
    "fontcull-cli",
    "vendored/fontcull-font-types",
    "vendored/fontcull-font-test-data",
    "vendored/fontcull-read-fonts",
    "vendored/fontcull-write-fonts",
    "vendored/fontcull-skrifa",
    "vendored/fontcull-klippa",
]
resolver = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
